Ballerinax/sample_kubernetes/kubernetes/hello-world-k8s-deployment/templates/hello_world_k8s.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "hello_world_k8s"
  name: "hello"
  ownerReferences: []
spec:
  externalIPs: []
  loadBalancerSourceRanges: []
  ports:
  - port: 9090
    protocol: "TCP"
    targetPort: 9090
  selector:
    app: "hello_world_k8s"
  type: "ClusterIP"
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    kubernetes.io/ingress.class: "nginx"
  finalizers: []
  labels:
    app: "hello_world_k8s"
  name: "helloep-ingress"
  ownerReferences: []
spec:
  rules:
  - host: "test.k8.com"
    http:
      paths:
      - backend:
          serviceName: "hello"
          servicePort: 9090
        path: "/"
  tls: []
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "hello_world_k8s"
  name: "hello-world-k8s-deployment"
  ownerReferences: []
spec:
  replicas: 1
  template:
    metadata:
      annotations: {}
      finalizers: []
      labels:
        app: "hello_world_k8s"
      ownerReferences: []
    spec:
      containers:
      - args: []
        command: []
        env: []
        envFrom: []
        image: "hello_world_k8s:latest"
        imagePullPolicy: "IfNotPresent"
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 9090
        name: "hello-world-k8s-deployment"
        ports:
        - containerPort: 9090
          protocol: "TCP"
        volumeMounts: []
      hostAliases: []
      imagePullSecrets: []
      initContainers: []
      nodeSelector: {}
      tolerations: []
      volumes: []
